# VOIPhone

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jaryd/voiphone/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioProcessor.cpp  AudioProcessor.h  CMakeLists.txt  SpeexConfig.cpp  SpeexConfig.h  Speexdsp.cpp  Speexdsp.h  com_jaryd_voiphone_AudioProcessor.cpp  com_jaryd_voiphone_audio_AudioProcessor.h
app/src/main/cpp/opus/: CMakeLists.txt
app/src/main/cpp/speex/: CMakeLists.txt
app/src/main/cpp/speex/include/speex/: speexdsp_config_types.h
app/src/main/cpp/speex/libspeexdsp/: testdenoise.c  testecho.c  testjitter.c  testresample.c  testresample2.c
app/src/main/java/com/jaryd/voiphone/: BindingAdapter.kt  CallingActivity.kt  MainActivity.kt  NetService.kt
app/src/main/res/drawable/: ic_call.xml  ic_call_end.xml  ic_call_end_white_24dp.xml  ic_call_white_24dp.xml  ic_circle_green_24dp.xml  ic_circle_red_24dp.xml  ic_mic_black_24dp.xml  ic_mic_off.xml  ic_mic_off_black_24dp.xml  ic_mic_on.xml  ic_mic_status.xml
app/src/main/res/layout/: activity_main.xml  call.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/jaryd/voiphone/: ExampleUnitTest.kt
gles/: build.gradle
gles/src/androidTest/java/com/jaryd/gles/: ExampleInstrumentedTest.kt
gles/src/main/: AndroidManifest.xml
gles/src/main/java/com/jaryd/gles/: EglCore.kt  EglSurfaceBase.kt  GLESHelper.kt  GLESRender.kt  GLImageCanvas.kt  GLImageOESCanvas.kt  WindowSurface.kt
gles/src/test/java/com/jaryd/gles/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
net/: build.gradle
net/src/androidTest/java/com/jaryd/net/: ExampleInstrumentedTest.kt
net/src/main/: AndroidManifest.xml
net/src/main/cpp/: BaseRTPSession.cpp  BaseRTPSession.h  CMakeLists.txt  JNICallBack.cpp  JNICallBack.h  RTPAudioSession.cpp  RTPAudioSession.h  RTPManager.cpp  RTPManager.h  RTPResponser.h  RTPVideoSession.cpp  RTPVideoSession.h  com_jaryd_net_RTPManager.cpp  com_jaryd_net_RTPManager.h
net/src/main/cpp/h264/: FUA_header.cpp  FUA_header.h  FUA_indicator.cpp  FUA_indicator.h  H264FrameSlice.cpp  H264FrameSlice.h  NALUHeader.cpp  NALUHeader.h  PlayLoads.cpp  PlayLoads.h
net/src/main/cpp/include/jrtplib3/: rtpconfig.h
net/src/main/java/com/jaryd/net/: NetConfig.kt  NetController.kt  NetPacket.kt  (+5 more)
opuscodec/: build.gradle
opuscodec/src/main/: AndroidManifest.xml
opuscodec/src/main/cpp/: CMakeLists.txt  OpusUtils.cpp  OpusUtils.h  com_jaryd_opuscodec_OpusUtils.cpp  com_jaryd_opuscodec_OpusUtils.h
videocodec/src/main/: AndroidManifest.xml
videocodec/src/main/res/values/: strings.xml
(+22 files in other folders)
